@@ -72,6 +72,8 @@ com.mchange.v2.log.MLog=log4j
 
 #resolvetest.name=thisIsSomeName
 
+#com.mchange.v2.c3p0.impl.DefaultConnectionTester.isValidTimeout=5
+
 #com.mchange.v2.c3p0.impl.DefaultConnectionTester.querylessTestRunner=METADATA_TABLESEARCH
 #com.mchange.v2.c3p0.impl.DefaultConnectionTester.querylessTestRunner=IS_VALID
 #com.mchange.v2.c3p0.impl.DefaultConnectionTester.querylessTestRunner=SWITCH
